Implement zustand store

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "~40.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-updates": "~0.4.0",
+    "jotai": "^0.13.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
@@ -20,7 +21,9 @@
     "react-native-screens": "~2.15.0",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.2.1"
+    "scheduler": "^0.20.1",
+    "styled-components": "^5.2.1",
+    "zustand": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
